<resources>
    <string name="app_name">IntStreetLight</string>
    <string name="no">no</string>
    <string name="loading">正在加载</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AmbientLight">环境光照强度</string>
    <string name="LightIntensity">设备灯光强度</string>
    <string name="Fog">雾灯</string>
    <string name="AutomaticDimming">自动调光模式</string>
    <string name="Raindrops">雨滴传感器数值</string>
    <string name="status">状态</string>
    <string name="time">更新时间：</string>
</resources>